# order-read-cache-api/src/main/api/openapi.yaml
@@ -33,6 +33,24 @@ paths:
       required: true
       schema:
         type: string
+  /products/{productId}/orders:
+    get:
+      responses:
+        200:
+          description: 'order per product'
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/order'
+      operationId: GetOrdersByProductsId
+    parameters:
+    - name: orderId
+      in: path
+      required: true
+      schema:
+        type: string
 components:
   schemas:
     order:
